--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -2,24 +2,31 @@
  * Author(s): Zentiph
  */
 
+
+:root { --nav-padding: 15px; }
+
 nav {
     display: flex;
     align-items: center;
-    column-gap: 30px;
-    width: 100%;
+    gap: 30px;
+    /* Don't include horizontal padding in the width */
+    width: calc(100% - 2 * var(--nav-padding));
     height: calc(var(--navbar-height) / 2);
 
     position: fixed;
     top: 0;
     z-index: 9999;
 
-    padding: 15px 5px;
+    padding: var(--nav-padding);
     background-color: #780116;
     box-shadow: 0 -5px 5px 10px rgba(0, 0, 0, 0.5);
 
-    font-size: 1.75em;
-    font-family: var(--nav-font-family);
+    font-family: var(--playful-font-family);
 }
 
-ul { display: contents; }
+img { display: block; }
+ul {
+    display: contents;
+    font-size: 2em;
+}
 li { display: block; }
